# shrc

./: .env  .envrc  .gitignore  Brewfile  Dockerfile  Gemfile  Makefile  README.md  action.yml  index.html  pyproject.toml  pythonstartup.py  setup.cfg
.github/: dependabot.yml
.github/workflows/: bats.yaml  codeql-analysis.yml  codeql-python.yml  rc.yaml  version.yaml
bash_completion.d/: bats.bash  dev-python  make-jobs  tar-extract  url-exists
etc/bash_completion.d/: secrets  version
etc/config/direnv/: config.toml  direnvrc
etc/config/grc/: conf.dockerps
etc/config/iTerm/: com.googlecode.iterm2.plist
etc/config/readline/: inputrc
etc/config/starship/: config.toml
etc/ipython/: ipython_config.py
etc/ipython/startup/: prompt.py  sys_path.py  userwarning.py
etc/profile.d/: config.sh  global.sh  jetbrains.sh  system.sh
etc/rc.d/: grc.sh
git/: .gitconfig  env.sh  git-blue  git-colors  git-cyan  git-latest  git-latest-remote  git-magenta  git-normal  git-tag-remote  git-white
libexec/: git-parse.sh
profile.d/: shenv.sh  stow.sh  system.sh
scratches/: dev-env  dev-env.sh  profile  script
src/env/: __init__.py  default.py  noset.py  secrets.py  system.py  utils.py
src/pyrc/: __init__.py  alias.py  bools.py  color.py  constants.py  customize.py  environment.py  jetbrains.py  out.py  pretty.py  show.py  startup.py  style.py  symbols.py  utils.py  variables.py
src/pyrc/env/: __init__.py  default.py  noset.py  secrets.py  system.py
src/shrc/: __init__.py  alias.py  bools.py  cli.py  color.py  console  constants.py  customize.py  get.py  helado.py  jetbrains.py  pretty.py  show.py  startup.py  style.py  symbols.py  system.py  typings.py  utils.py  variables.py
src/shrc/color/: __init__.py  constants.py  out.py  show.py  style.py  symbols.py
src/shrc/env/: __init__.py  colorize.py  default.py  misc.py  secrets.py  system.py  utils.py
src/shrc/profile/: __init__.py  ipython_config.py
src/shrc/profile/startup/: ps1.py
src/watch/: __init__.py  cli.py  models.md  startup.py  watchman.py  watchme.py
src/watch/backup/: .favorites.json  Makefile  README.md  cli.py  docker-ce-install.sh  setup.cfg  watchme  watchme_first
src/watch/examples/: fsmonitor-watchman
src/watch/lib/: watchme.bash
tests/: _bats::sourced.bats  _bats::vars.bats  asserts.bats  bats::array.bats  bats::envrc.bats  conftest.py  func::exported.bats  start.py  test_get.py  version
tests/bats.bash/: _bats::sourced.bats  _bats::vars.bats  asserts.bats  bats::array.bats  bats::envrc.bats  func::exported.bats
tests/helpers/: helper.bash  tests_helper.bash
tests/pyrc/: test_aioclone.py  test_pyrc_cli.py  test_pyrc_imports.py
tests/shrc/: test_cli.py  test_imports.py
tests/watch/: test_cli.py  test_imports.py  test_watch_cli.py  test_watch_imports.py
