[metadata]
name = shrc

[global]
verbose = 0

[egg_info]
egg_base = /tmp

[options]
install_requires =
    aiohttp
    behave
    build
    darling
    ipython
    packaging
    pypi-cleanup
    pytest
    rich
    typer[all]
    wheel
package_dir =
    =src
packages = find:
python_requires = >=3.10
scripts =
    bin/*

[options.data_files]
bin =
    src/bin/*
etc/bash_completion.d =
    bash_completion.d/*

[options.entry_points]
console_scripts =
    pyrc = shrc:app

[options.extras_require]
test =
    pytest

[options.packages.find]
where = src
