[metadata]
name = wbox

[global]
verbose = 0

[egg_info]
egg_base = /tmp

[options]
install_requires =
    pywatchman
    secho

package_dir =
    =src
packages = find:
python_requires = >=3.9

[options.data_files]
etc/bash_completion.d =
    lib/*.bash

[options.entry_points]
console_scripts =
    wbox = wbox:app

[options.extras_require]
test = 
    secho[dev]

[options.packages.find]
where = src
